<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setting_linearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/DIMEN_5PX"
            android:layout_marginTop="@dimen/DIMEN_5PX"
            android:fadeScrollbars="true"
            android:orientation="vertical"
            android:scrollbarFadeDuration="0"
            android:scrollbars="none" >

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/app_settings"
                    style="@style/setting_left_but_style"
                    android:checked="true"
                    android:text="@string/app_settings" />

                <RadioButton
                    android:id="@+id/machine_settings"
                    style="@style/setting_left_but_style"
                    android:text="@string/machine_settings" />

                <RadioButton
                    android:id="@+id/under_ctl_settings"
                    style="@style/setting_left_but_style"
                    android:text="@string/xiakong_settings"
                    android:visibility="gone" />

                <RadioButton
                    android:id="@+id/install_app"
                    style="@style/setting_left_but_style"
                    android:text="@string/install_app" />

                <RadioButton
                    android:id="@+id/uninstall_app"
                    style="@style/setting_left_but_style"
                    android:text="@string/uninstall_app" />

                <RadioButton
                    android:id="@+id/systems_settings"
                    style="@style/setting_left_but_style"
                    android:text="@string/system_settings" />
            </RadioGroup>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@+id/setting_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </FrameLayout>
    </LinearLayout>

</LinearLayout>