<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_top" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/device_sel"
        android:textColor="#ffffff"
        android:textSize="@dimen/goal_activity_title_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_h"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bike_b8900ut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/settings_margin"
            android:layout_weight="1"
            android:background="@drawable/common"
            android:text="@string/bike_b8900ut" />

        <Button
            android:id="@+id/bike_b8900et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/settings_margin"
            android:layout_weight="1"
            android:background="@drawable/common"
            android:text="@string/bike_b8900et" />

        <Button
            android:id="@+id/bike_b8900rt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/settings_margin"
            android:layout_marginRight="@dimen/settings_margin"
            android:layout_weight="1"
            android:background="@drawable/common"
            android:text="@string/bike_b8900rt" />
    </LinearLayout>

    <TextView
        android:id="@+id/device_sel_tx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="60dp"
        android:gravity="center_horizontal"
        android:textColor="#ffffff"
        android:textSize="@dimen/goal_activity_title_size" />

    <TextView
        android:id="@+id/device_sel_exit"
        android:layout_width="60dp"
        android:layout_height="60dp" />

</RelativeLayout>